--- a/src/scss/_aside.scss
+++ b/src/scss/_aside.scss
@@ -80,6 +80,7 @@
             margin-bottom: 30px;
             .complited-task{
                 margin-right: 20px;
+                cursor: pointer;
             }
             .task-count{
                 font-size: 35px;
